--- a/olingo/commons-api/pom.xml
+++ b/olingo/commons-api/pom.xml
@@ -19,13 +19,16 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
+            <!--<version>4.13.2</version>-->
             <scope>test</scope>
         </dependency>
+<!--
          <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
              <version>30.1.1-jre</version>
         </dependency>
+-->
 
     </dependencies>
     <build>
