--- a/olingo/pom.xml
+++ b/olingo/pom.xml
@@ -46,11 +46,11 @@
     </properties>
     <dependencyManagement>
         <dependencies>
-            <dependency>
+            <!--<dependency>
                 <groupId>com.google.guava</groupId>
                 <artifactId>guava</artifactId>
                 <version>30.1.1-jre</version>
-            </dependency>
+            </dependency>-->
 
             <dependency>
                 <groupId>commons-codec</groupId>
