--- a/sequoia/odata4-jpa-metadata/pom.xml
+++ b/sequoia/odata4-jpa-metadata/pom.xml
@@ -60,9 +60,9 @@
         </dependency>
 
         <dependency>
-            <groupId>org.reflections</groupId>
-            <artifactId>reflections</artifactId>
-            <version>0.9.11</version>
+            <groupId>net.oneandone.reflections8</groupId>
+            <artifactId>reflections8</artifactId>
+            <version>0.11.7</version>
         </dependency>
     </dependencies>
     <build>
